assets/css/styles.css
/* ... */
/*=============== SERVICES ===============*/
.services__container {
  row-gap: 2rem;
}
.services__card {
  position: relative;
  background-color: var(--container-color);
  padding: 2rem 1.5rem;
  border-radius: 3rem;
  display: grid;
  row-gap: 1.5rem;
  overflow: hidden;
}
.services__card .blob {
  z-index: 0;
  top: -7.75rem;
  left: -7.75rem;
}
.services__container .services__card:nth-child(even) .blob {
  left: initial;
  right: -7.75rem;
}
.services__data,
.services__info,
.services__icon {
  position: relative;
  z-index: 1;
}
.services__title {
  font-size: var(--h2-font-size);
  margin-bottom: 0.5rem;
}
.services__subtitle {
  font-size: var(--small-font-size);
  font-weight: var(--font-regular);
  color: var(--text-color);
  margin-bottom: 0.5rem;
}
.services__skills {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  gap: 0.5rem 0.25rem;
  margin-bottom: 1rem;
}
.services__skill {
  background-color: var(--container-color);
  color: var(--title-color);
  border: 1px solid var(--title-color);
  padding: 4px 10px;
  border-radius: 4rem;
  font-size: var(--smaller-font-size);
  font-family: var(--second-font);
}
.services__button {
  display: grid;
  place-items: center;
  width: 32px;
  height: 32px;
  background-color: var(--body-color);
  color: var(--title-color);
  border: 2px solid var(--first-color);
  border-radius: 0.5rem;
  font-size: 1.5rem;
  position: absolute;
  right: 1rem;
  bottom: 1rem;
  z-index: 2;
  cursor: pointer;
}
.services__button i {
  transition: rotate 0.4s;
}

/* Hide services info */
.services-close .services__info {
  height: 0;
  opacity: 0;
  overflow: hidden;
}
.services__info {
  overflow: hidden;
  transition:
    height 0.4s cubic-bezier(0.4, 0, 0.2, 1),
    opacity 0.4s cubic-bezier(0.4, 0, 0.2, 1);
}
.services__icon {
  display: grid;
  place-items: center;
  width: 48px;
  height: 48px;
  background-color: var(--container-color);
  border: 1px solid rgba(255, 255, 255, 0.1);
  border-radius: 1rem;
  font-size: 2rem;
  color: var(--first-color);
  margin-bottom: 1rem;
  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
  transition: 0.4s;
}

.services__card:hover .services__icon {
  background-color: var(--first-color);
  color: var(--body-color);
  transform: rotate(15deg);
}
/* Rotate icon */
.services__card.services-close .ri-arrow-down-s-line {
  transition: transform 0.4s;
}

.services__card.services-open .ri-arrow-down-s-line {
  transform: rotate(180deg);
}
/* .services-open .services__button i {
  rotate: -180deg;
} */

/*=============== TESTIMONIALS ===============*/

/* Infinite scroll animation */

/*=============== CONTACT ===============*/
.contact__container {
  row-gap: 4rem;
  padding-bottom: 2rem;
}
.contact .section__title {
  margin-bottom: 1rem;
}
.contact__data {
  text-align: center;
}
.contact__description {
  font-family: var(--second-font);
  margin-bottom: 1rem;
}
.contact__email {
  display: none;
}
.contact__button {
  cursor: pointer;
}
.contact__content {
  row-gap: 3rem;
}
.contact__info {
  row-gap: 1rem;
}
.contact__title {
  font-size: var(--h3-font-size);
  color: var(--first-color);
  text-align: center;
  margin-bottom: 0.5rem;
}
.contact__address {
  color: var(--title-color);
  font-style: normal;
  font-weight: var(--font-medium);
  text-align: center;
}
.contact__links {
  display: grid;
  grid-template-columns: max-content;
  justify-content: center;
  row-gap: 0.2rem;
}
.contact__link {
  color: var(--title-color);
  font-weight: var(--font-medium);
  display: flex;
  justify-content: space-between;
  align-items: center;
  column-gap: 0.5rem;
  transition:
    transform 0.4s,
    color 0.4s;
}
.contact__link i {
  font-size: 1.5rem;
}
.contact__link:hover {
  transform: translateX(0.35rem);
  color: var(--text-color);
}

/*=============== FOOTER ===============*/
.footer {
  position: relative;
  padding-block: 4rem 2rem;
  text-align: center;
  row-gap: 1rem;
  overflow: hidden;
}
.footer .blob-animate {
  right: -3rem;
  bottom: -3rem;
}
.footer__copy {
  color: var(--title-color);
}
.footer__copy span {
  color: var(--first-color);
}
.footer__year span {
  font-family: var(--second-font);
}
/*=============== SCROLL BAR ===============*/
::-webkit-scrollbar {
  width: 0.6rem;
  background-color: hsl(110, 6%, 12%);
  border-radius: 0.5rem;
}
::-webkit-scrollbar-thumb {
  background-color: hsl(110, 96%, 15%);
  border-radius: 0.5rem;
}
::-webkit-scrollbar-thumb:hover {
  background-color: hsl(109, 96%, 22%);
}
/*=============== BREAKPOINTS ===============*/
/* For small devices */
@media screen and (max-width: 320px) {
  .intro-loader .name{
    font-size: clamp(1rem, 8vw, 1rem);
    letter-spacing:3px;
  }

  .container {
    margin-inline: 1rem;
  }

  .blob,
  .home__image .blob-animate {
    width: 220px;
    height: 220px;
  }
  .projects__card {
    padding-inline: 1rem;
  }
  .work__tabs {
    padding-inline: 1rem;
  }
}

/* For medium devices */
@media screen and (min-width: 540px) {
  .home__container {
    width: 460px;
    margin-inline: auto;
  }
  .about__container,
  .work__container,
  .services__container {
    grid-template-columns: 460px;
    justify-content: center;
  }
  .about__data,
  .about__data .section__title {
    text-align: center;
  }
  :is(.projects) .section__title {
    text-align: center;
    margin-left: 0;
  }
  .projects__card {
    width: 350px;
  }
  .work__tabs {
    width: 330px;
    justify-self: center;
  }
  /* .contact__container {
    grid-template-columns: 460px;
    justify-content: center;
  } */
}
/* ... */

